# Jynx

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/reference/: callbacks.md  jynx.md  layers.md
jynx/: __init__.py  callbacks.py  fit.py  pytree.py
jynx/layers/: __init__.py  containers.py  factory.py  linear.py  misc.py  module.py  moe.py  nets.py  rnn.py  static.py  transformer.py
tests/: test_layers.py
