[tool.poetry]
name = "jax-jynx"
version = "0.1.1"
description = "A neural network library using jax"
authors = ["Scott Cameron"]
readme = "README.md"
packages = [
  { include = "jynx" }
]

[tool.poetry.dependencies]
python = ">=3.12"
jax = "^0.4.24"
jaxlib = "^0.4.24"
optax = "^0.1.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pre-commit = "^3.6.1"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
hypothesis = "^6.98.3"
ruff = "^0.2.1"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "C901"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pylsp-mypy]
enabled = true

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
