[tool.poetry]
name = "jax-jynx"
version = "0.3.1"
description = "A neural network library using jax"
authors = ["Scott Cameron"]
readme = "README.md"
packages = [
  { include = "jynx" }
]

[tool.poetry.dependencies]
python = ">=3.12"
jax = ">=0.4.27"
jaxlib = ">=0.4.24"
optax = ">=0.1.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pre-commit = "^3.6.1"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
hypothesis = "^6.98.3"
ruff = "^0.2.1"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.9"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "C901"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".

[tool.pylsp-mypy]
enabled = true

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
